# HexaMKOS

./: .gitignore  Cargo.toml  README.md  os-info.json  qemu_logs
.cargo/: config.toml
src/: kernel.rs  serial.rs
src/Drivers/: vga.rs
src/Drivers/Setup/: GDT.rs  IDT.rs  interrupts.rs
src/Drivers/Writers/: VGA.rs
src/IO/: IO.rs
src/Memory/Paging/: paging.rs
