[package]
name = "RenseOS"
version = "0.1.0"
edition = "2018"
author = "IHaydot"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = {version = "0.9.8", features = ["map_physical_memory"]}
x86_64 = "0.14.8"
uart_16550 = "0.2.16"
spin = "0.9.2"
pic8259 = "0.10.2"
pc-keyboard = "0.5.1"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.dev]

[profile.release]

[[bin]]
name = "kernel"
path = "src/kernel.rs"

[package.metadata.bootimage]
test-success-exit-code = 33  
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-timeout = 300

